####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = bag bagd libbag 

EXTRA_DIST = NEWS aclocal.m4 README ltmain.sh configure configure.in config.guess install-sh config.sub missing mkinstalldirs config.h.in stamp-h.in AUTHORS INSTALL bag.kdevprj ChangeLog COPYING 

####### kdevelop will overwrite this part!!! (end)############
