# Configuration for BaG
# this program is free software and protected by the GNU GPL version 2 or
# (at your option) any newer, see file COPYING for details
#
# (c) Konrad Rosebaum, 2002


dnl Process this file with autoconf to produce a configure script.
AC_INIT(bagd/bagdinitdb.c)
AM_CONFIG_HEADER(config.h)


AM_INIT_AUTOMAKE(bag,0.1.0)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP

AC_PROG_INSTALL

AC_PROG_LIBTOOL

dnl Checks for libraries.

AM_PATH_LIBGNUTLS( 0.4.2,, AC_MSG_ERROR([[
***
*** libgnutls was not found. You may want to get it from
*** ftp://ftp.gnutls.org/pub/gnutls/
]]))

dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check for Optional libs

dnl Checks for library functions.


dnl Postgres, there is probably a much better way:
CFLAGS="$CFLAGS -I/usr/include/postgresql"
LDFLAGS="$LDFLAGS -lpq -lssl -lpam"


AC_OUTPUT(./Makefile libbag/Makefile bagd/Makefile bag/Makefile doc/Makefile diff/Makefile bagd/sql/Makefile Makefile )

