# Configuration for BaG
# this program is free software and protected by the GNU GPL version 2 or
# (at your option) any newer, see file COPYING for details
#
# (c) Konrad Rosenbaum, 2002


dnl Process this file with autoconf to produce a configure script.
AC_INIT(bagd/bagdinitdb.c)
AM_CONFIG_HEADER(config.h)


AM_INIT_AUTOMAKE(bag,0.1.0)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP

AC_PROG_INSTALL

AC_PROG_LIBTOOL

dnl Checks for libraries.

have_gnutls=0
AM_PATH_LIBGNUTLS( 0.4.2, [
	AC_DEFINE(HAVE_GNUTLS)
	have_gnutls=1
], AC_MSG_WARN([[
***
*** libgnutls was not found. You may want to get it from
*** ftp://ftp.gnutls.org/pub/gnutls/
*** Bag will be created without crypto support
***
]]))

AM_CONDITIONAL(HAVE_GNUTLS,[test x$have_gnutls = x1])

dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check for Optional libs

dnl Checks for library functions.


dnl Postgres, there is probably a much better way:
BAG_POSTGRES

if test "$HAVE_POSTGRES" != 1 ; then
	AC_MSG_WARN([[
*** 
*** Postgres was not found, unable to build the server.
*** The client will be build.
***
]])
fi

AM_CONDITIONAL(HAVE_POSTGRES,[test x$HAVE_POSTGRES = x1])


dnl PAM

AC_CHECK_LIB(pam, pam_authenticate, [
	AC_DEFINE(HAVE_PAM)
	PAM_LDFLAGS="-lpam"
	AC_SUBST(PAM_LDFLAGS)
])

AC_OUTPUT(./Makefile libbag/Makefile bagd/Makefile bag/Makefile doc/Makefile diff/Makefile bagd/sql/Makefile Makefile tools/Makefile )

